--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gif-jni"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 gif = "0.11.3"
 jni = "0.19.0"
-skia-safe = "0.50.0"
+skia-safe = { version = "0.50.0" }
 
 [lib]
 crate-type = ["cdylib"]
