--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,31 +61,92 @@ jobs:
         with:
           version: "13.0.1"
 
-      - name: Install Rust Target
+      - name: Install Rust X64 Target
         shell: bash
         run: |
           rustup target add x86_64-unknown-linux-gnu
-          rustup target add aarch64-unknown-linux-gnu
           sudo apt-get update
+
+      - name: Install Rust AARCH64 Target
+        shell: bash
+        run: |
+          rustup target add aarch64-unknown-linux-gnu
           sudo apt-get install -y -qq gcc-aarch64-linux-gnu:amd64 g++-aarch64-linux-gnu:amd64
           wget http://ports.ubuntu.com/pool/main/f/fontconfig/libfontconfig1-dev_2.13.1-2ubuntu3_arm64.deb
           wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype-dev_2.10.1-2ubuntu0.2_arm64.deb
-          dpkg -X libfontconfig1-dev*.deb apt_temp
-          dpkg -X libfreetype-dev*.deb apt_temp
-          sudo cp -r apt_temp/usr/lib/aarch64-linux-gnu/*.a /usr/lib/aarch64-linux-gnu/
+          dpkg -X libfontconfig1-dev*arm64.deb aarch64
+          dpkg -X libfreetype-dev*arm64.deb aarch64
+          sudo cp -r aarch64/usr/lib/aarch64-linux-gnu/*.a /usr/lib/aarch64-linux-gnu/
           ls -l /usr/lib/aarch64-linux-gnu
+
+      - name: Install Rust PPC64EL Target
+        shell: bash
+        run: |
+          rustup target add powerpc64le-unknown-linux-gnu
+          sudo apt-get install -y -qq gcc-powerpc64le-linux-gnu:amd64 g++-powerpc64le-linux-gnu:amd64
+          wget http://ports.ubuntu.com/pool/main/f/fontconfig/libfontconfig1-dev_2.13.1-2ubuntu3_ppc64el.deb
+          wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype-dev_2.10.1-2ubuntu0.2_ppc64el.deb
+          dpkg -X libfontconfig1-dev*ppc64el.deb ppc64el
+          dpkg -X libfreetype-dev*ppc64el.deb ppc64el
+          sudo cp -r ppc64el/usr/lib/powerpc64le-linux-gnu/*.a /usr/lib/powerpc64le-linux-gnu/
+          ls -l /usr/lib/powerpc64le-linux-gnu
+
+      - name: Install Rust S390X Target
+        shell: bash
+        run: |
+          rustup target add s390x-unknown-linux-gnu
+          sudo apt-get install -y -qq gcc-s390x-linux-gnu:amd64 g++-s390x-linux-gnu:amd64
+          wget http://ports.ubuntu.com/pool/main/f/fontconfig/libfontconfig1-dev_2.13.1-2ubuntu3_s390x.deb
+          wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype-dev_2.10.1-2ubuntu0.2_s390x.deb
+          dpkg -X libfontconfig1-dev*s390x.deb s390x
+          dpkg -X libfreetype-dev*s390x.deb s390x
+          sudo cp -r s390x/usr/lib/s390x-linux-gnu/*.a /usr/lib/s390x-linux-gnu/
+          ls -l /usr/lib/s390x-linux-gnu
+
+      - name: Install Rust RISCV64 Target
+        shell: bash
+        run: |
+          rustup target add riscv64gc-unknown-linux-gnu
+          sudo apt-get install -y -qq gcc-riscv64-linux-gnu:amd64 g++-riscv64-linux-gnu:amd64
+          wget http://ports.ubuntu.com/pool/main/f/fontconfig/libfontconfig1-dev_2.13.1-2ubuntu3_riscv64.deb
+          wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype-dev_2.10.1-2ubuntu0.2_riscv64.deb
+          dpkg -X libfontconfig1-dev*riscv64.deb riscv64
+          dpkg -X libfreetype-dev*riscv64.deb riscv64
+          sudo cp -r riscv64/usr/lib/riscv64-linux-gnu/*.a /usr/lib/riscv64-linux-gnu/
+          ls -l /usr/lib/riscv64-linux-gnu
 
       - name: Build Linux X64
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target x86_64-unknown-linux-gnu
 
-      - name: Build Linux ARM64
+      - name: Build Linux AARCH64
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
         env:
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+
+      - name: Build Linux PPC64EL
+        shell: bash
+        run: |
+          cargo build --package gif-jni --lib --release --target powerpc64le-unknown-linux-gnu
+        env:
+          CARGO_TARGET_POWERPC64LE_UNKNOWN_LINUX_GNU_LINKER: powerpc64le-linux-gnu
+
+      - name: Build Linux S390X
+        shell: bash
+        run: |
+          cargo build --package gif-jni --lib --release --target s390x-unknown-linux-gnu
+        env:
+          CARGO_TARGET_S390X_UNKNOWN_LINUX_GNU_LINKER: s390x-linux-gnu
+
+      - name: Build Linux RISCV64
+        shell: bash
+        run: |
+          cargo build --package gif-jni --lib --release --target riscv64gc-unknown-linux-gnu
+        env:
+          CARGO_TARGET_RISCV64GC_UNKNOWN_LINUX_GNU_LINKER: riscv64-linux-gnu
 
       - name: Rename Library File Name
         shell: bash
@@ -94,7 +155,13 @@ jobs:
           cp target/x86_64-unknown-linux-gnu/release/libgif_jni.so library/libgif-linux-x64.so
           sha256sum library/libgif-linux-x64.so | awk '{ print $1 }' > library/libgif-linux-x64.so.sha256
           cp target/aarch64-unknown-linux-gnu/release/libgif_jni.so library/libgif-linux-arm64.so
-          sha256sum library/libgif-linux-x64.so | awk '{ print $1 }' > library/libgif-linux-arm64.so.sha256
+          sha256sum library/libgif-linux-arm64.so | awk '{ print $1 }' > library/libgif-linux-arm64.so.sha256
+          cp target/powerpc64le-unknown-linux-gnu/release/libgif_jni.so library/libgif-linux-ppc64el.so
+          sha256sum library/libgif-linux-ppc64el.so | awk '{ print $1 }' > library/libgif-linux-ppc64el.so.sha256
+          cp target/s390x-unknown-linux-gnu/release/libgif_jni.so library/libgif-linux-s390x.so
+          sha256sum library/libgif-linux-s390x.so | awk '{ print $1 }' > library/libgif-linux-s390x.so.sha256
+          cp target/riscv64gc-unknown-linux-gnu/release/libgif_jni.so library/libgif-linux-riscv64.so
+          sha256sum library/libgif-linux-riscv64.so | awk '{ print $1 }' > library/libgif-linux-riscv64.so.sha256
 
       - name: Upload
         uses: actions/upload-artifact@v3
