--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -132,21 +132,21 @@ jobs:
         run: |
           cargo build --package gif-jni --lib --release --target powerpc64le-unknown-linux-gnu
         env:
-          CARGO_TARGET_POWERPC64LE_UNKNOWN_LINUX_GNU_LINKER: powerpc64le-linux-gnu
+          CARGO_TARGET_POWERPC64LE_UNKNOWN_LINUX_GNU_LINKER: powerpc64le-linux-gnu-gcc
 
       - name: Build Linux S390X
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target s390x-unknown-linux-gnu
         env:
-          CARGO_TARGET_S390X_UNKNOWN_LINUX_GNU_LINKER: s390x-linux-gnu
+          CARGO_TARGET_S390X_UNKNOWN_LINUX_GNU_LINKER: s390x-linux-gnu-gcc
 
       - name: Build Linux RISCV64
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target riscv64gc-unknown-linux-gnu
         env:
-          CARGO_TARGET_RISCV64GC_UNKNOWN_LINUX_GNU_LINKER: riscv64-linux-gnu
+          CARGO_TARGET_RISCV64GC_UNKNOWN_LINUX_GNU_LINKER: riscv64-linux-gnu-gcc
 
       - name: Rename Library File Name
         shell: bash
