--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gif-jni"
-version = "2.0.1"
+version = "2.0.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 gif = "0.11.4"
 jni = "0.19.0"
-skia-safe = { version = "0.52.0" }
+skia-safe = { version = "0.49.1", features = ["binary-cache", "gl"] }
 
 [lib]
 crate-type = ["cdylib"]
