--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -74,22 +74,24 @@ jobs:
           sudo apt-get install -y -qq gcc-aarch64-linux-gnu:amd64 g++-aarch64-linux-gnu:amd64
           wget http://ports.ubuntu.com/pool/main/f/fontconfig/libfontconfig1-dev_2.13.1-2ubuntu3_arm64.deb
           wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype-dev_2.10.1-2ubuntu0.2_arm64.deb
-          dpkg -X libfontconfig1-dev*arm64.deb aarch64
-          dpkg -X libfreetype-dev*arm64.deb aarch64
+          wget http://ports.ubuntu.com/pool/main/e/expat/libexpat1-dev_2.4.7-1_arm64.deb
+          dpkg -X libfontconfig1-dev_*_arm64.deb aarch64
+          dpkg -X libfreetype-dev_*_arm64.deb aarch64
+          dpkg -X libexpat1-dev_*_arm64.deb aarch64
           sudo cp -r aarch64/usr/lib/aarch64-linux-gnu/*.a /usr/lib/aarch64-linux-gnu/
           ls -l /usr/lib/aarch64-linux-gnu
 
-      - name: Install Rust PPC64EL Target
-        shell: bash
-        run: |
-          rustup target add powerpc64le-unknown-linux-gnu
-          sudo apt-get install -y -qq gcc-powerpc64le-linux-gnu:amd64 g++-powerpc64le-linux-gnu:amd64
-          wget http://ports.ubuntu.com/pool/main/f/fontconfig/libfontconfig1-dev_2.13.1-2ubuntu3_ppc64el.deb
-          wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype-dev_2.10.1-2ubuntu0.2_ppc64el.deb
-          dpkg -X libfontconfig1-dev*ppc64el.deb ppc64el
-          dpkg -X libfreetype-dev*ppc64el.deb ppc64el
-          sudo cp -r ppc64el/usr/lib/powerpc64le-linux-gnu/*.a /usr/lib/powerpc64le-linux-gnu/
-          ls -l /usr/lib/powerpc64le-linux-gnu
+#      - name: Install Rust PPC64EL Target
+#        shell: bash
+#        run: |
+#          rustup target add powerpc64le-unknown-linux-gnu
+#          sudo apt-get install -y -qq gcc-powerpc64le-linux-gnu:amd64 g++-powerpc64le-linux-gnu:amd64
+#          wget http://ports.ubuntu.com/pool/main/f/fontconfig/libfontconfig1-dev_2.13.1-2ubuntu3_ppc64el.deb
+#          wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype-dev_2.10.1-2ubuntu0.2_ppc64el.deb
+#          dpkg -X libfontconfig1-dev*ppc64el.deb ppc64el
+#          dpkg -X libfreetype-dev*ppc64el.deb ppc64el
+#          sudo cp -r ppc64el/usr/lib/powerpc64le-linux-gnu/*.a /usr/lib/powerpc64le-linux-gnu/
+#          ls -l /usr/lib/powerpc64le-linux-gnu
 
       - name: Build Linux X64
         shell: bash
@@ -103,12 +105,12 @@ jobs:
         env:
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
 
-      - name: Build Linux PPC64EL
-        shell: bash
-        run: |
-          cargo build --package gif-jni --lib --release --target powerpc64le-unknown-linux-gnu
-        env:
-          CARGO_TARGET_POWERPC64LE_UNKNOWN_LINUX_GNU_LINKER: powerpc64le-linux-gnu-gcc
+#      - name: Build Linux PPC64EL
+#        shell: bash
+#        run: |
+#          cargo build --package gif-jni --lib --release --target powerpc64le-unknown-linux-gnu
+#        env:
+#          CARGO_TARGET_POWERPC64LE_UNKNOWN_LINUX_GNU_LINKER: powerpc64le-linux-gnu-gcc
 
       - name: Rename Library File Name
         shell: bash
@@ -135,7 +137,6 @@ jobs:
 
   android-build:
     runs-on: ubuntu-latest
-    # container: ghcr.io/pragmatrix/rust-skia-linux:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
