--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -73,11 +73,13 @@ jobs:
           rustup target add aarch64-unknown-linux-gnu
           sudo apt-get install -y -qq gcc-aarch64-linux-gnu:amd64 g++-aarch64-linux-gnu:amd64
           wget http://ports.ubuntu.com/pool/main/f/fontconfig/libfontconfig1-dev_2.13.1-2ubuntu3_arm64.deb
-          wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype-dev_2.10.1-2ubuntu0.2_arm64.deb
-          wget http://ports.ubuntu.com/pool/main/e/expat/libexpat1-dev_2.4.7-1_arm64.deb
+          wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype-dev_2.10.1-2_arm64.deb
+          wget http://ports.ubuntu.com/pool/main/e/expat/libexpat1-dev_2.2.9-1build1_arm64.deb
+          wget http://ports.ubuntu.com/pool/main/e/expat/libblkid-dev_2.34-0.1ubuntu9_arm64.deb
           dpkg -X libfontconfig1-dev_*_arm64.deb aarch64
           dpkg -X libfreetype-dev_*_arm64.deb aarch64
           dpkg -X libexpat1-dev_*_arm64.deb aarch64
+          dpkg -X libblkid-dev_*_arm64.deb aarch64
           sudo cp -r aarch64/usr/lib/aarch64-linux-gnu/*.a /usr/lib/aarch64-linux-gnu/
           ls -l /usr/lib/aarch64-linux-gnu
 
