--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,17 +72,29 @@ jobs:
         run: |
           rustup target add aarch64-unknown-linux-gnu
           sudo apt-get install -y -qq gcc-aarch64-linux-gnu:amd64 g++-aarch64-linux-gnu:amd64
+          wget http://ports.ubuntu.com/pool/main/f/fontconfig/libfontconfig1_2.13.1-2ubuntu3_arm64.deb
           wget http://ports.ubuntu.com/pool/main/f/fontconfig/libfontconfig1-dev_2.13.1-2ubuntu3_arm64.deb
+          wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype_2.10.1-2_arm64.deb
           wget http://ports.ubuntu.com/pool/main/f/freetype/libfreetype-dev_2.10.1-2_arm64.deb
+          wget http://ports.ubuntu.com/pool/main/e/expat/libexpat1_2.2.9-1build1_arm64.deb
           wget http://ports.ubuntu.com/pool/main/e/expat/libexpat1-dev_2.2.9-1build1_arm64.deb
+          wget http://ports.ubuntu.com/pool/main/u/util-linux/libuuid1_2.34-0.1ubuntu9_arm64.deb
           wget http://ports.ubuntu.com/pool/main/u/util-linux/uuid-dev_2.34-0.1ubuntu9_arm64.deb
+          wget http://ports.ubuntu.com/pool/main/libp/libpng1.6/libpng16-16_1.6.37-2_arm64.deb
           wget http://ports.ubuntu.com/pool/main/libp/libpng1.6/libpng-dev_1.6.37-2_arm64.deb
+          wget http://ports.ubuntu.com/pool/main/z/zlib/zlib1g_1.2.11.dfsg-2ubuntu1_arm64.deb
           wget http://ports.ubuntu.com/pool/main/z/zlib/zlib1g-dev_1.2.11.dfsg-2ubuntu1_arm64.deb
+          dpkg -X libfontconfig1_*_arm64.deb aarch64
           dpkg -X libfontconfig1-dev_*_arm64.deb aarch64
+          dpkg -X libfreetype_*_arm64.deb aarch64
           dpkg -X libfreetype-dev_*_arm64.deb aarch64
+          dpkg -X libexpat1_*_arm64.deb aarch64
           dpkg -X libexpat1-dev_*_arm64.deb aarch64
+          dpkg -X libuuid1_*_arm64.deb aarch64
           dpkg -X uuid-dev_*_arm64.deb aarch64
+          dpkg -X libpng16-16_*_arm64.deb aarch64
           dpkg -X libpng-dev_*_arm64.deb aarch64
+          dpkg -X zlib1g_*_arm64.deb aarch64
           dpkg -X zlib1g-dev_*_arm64.deb aarch64
           sudo cp -r aarch64/usr/lib/aarch64-linux-gnu/* /usr/lib/aarch64-linux-gnu/
           ls -l /usr/lib/aarch64-linux-gnu
