--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -86,7 +86,7 @@ jobs:
           wget http://ports.ubuntu.com/pool/main/z/zlib/zlib1g-dev_1.2.11.dfsg-2ubuntu1_arm64.deb
           dpkg -X libfontconfig1_*_arm64.deb aarch64
           dpkg -X libfontconfig1-dev_*_arm64.deb aarch64
-          dpkg -X libfreetype_*_arm64.deb aarch64
+          dpkg -X libfreetype6_*_arm64.deb aarch64
           dpkg -X libfreetype-dev_*_arm64.deb aarch64
           dpkg -X libexpat1_*_arm64.deb aarch64
           dpkg -X libexpat1-dev_*_arm64.deb aarch64
