--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -96,6 +96,7 @@ jobs:
           dpkg -X libpng-dev_*_arm64.deb aarch64
           dpkg -X zlib1g_*_arm64.deb aarch64
           dpkg -X zlib1g-dev_*_arm64.deb aarch64
+          sudo mkdir /lib/aarch64-linux-gnu/
           sudo cp -r aarch64/lib/aarch64-linux-gnu/* /lib/aarch64-linux-gnu/
           ls -l /lib/aarch64-linux-gnu
           sudo cp -r aarch64/usr/lib/aarch64-linux-gnu/* /usr/lib/aarch64-linux-gnu/
