--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,10 +8,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          submodules: true
-
-      - name: Fix git dubious ownership errors when synchronizing Skia dependencies
-        run: git config --global --add safe.directory '*'
+          set-safe-directory: false
 
       - name: Install Rust
         uses: hecrj/setup-rust-action@master
@@ -56,10 +53,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          submodules: true
-
-      - name: Fix git dubious ownership errors when synchronizing Skia dependencies
-        run: git config --global --add safe.directory '*'
+          set-safe-directory: false
 
       - name: Install Rust
         uses: hecrj/setup-rust-action@master
@@ -178,10 +172,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          submodules: true
-
-      - name: Fix git dubious ownership errors when synchronizing Skia dependencies
-        run: git config --global --add safe.directory '*'
+          set-safe-directory: false
 
       - name: Install Rust
         uses: hecrj/setup-rust-action@master
@@ -256,10 +247,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          submodules: true
-
-      - name: Fix git dubious ownership errors when synchronizing Skia dependencies
-        run: git config --global --add safe.directory '*'
+          set-safe-directory: false
 
       - name: Install Rust
         uses: hecrj/setup-rust-action@master
